--- a/src/public/my_readed_books.html
+++ b/src/public/my_readed_books.html
@@ -7,7 +7,7 @@
 
         <link href="css/materialize.min.css" rel="stylesheet">
         <link href="css/footer.css" rel="stylesheet">
-        <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="icon" type="image/png" href="images/favicon.png">
 
         <title>Mis Libros Leídos</title>
