--- a/src/public/free_themes.html
+++ b/src/public/free_themes.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="icon" type="image/png" href="images/favicon.png">
 
-        <title>Inicio</title>
+        <title>Temas Libres</title>
     </head>
 
     <body>
@@ -20,7 +20,7 @@
         <!-- scripts --> 
         <script src="js/jquery-3.3.1.min.js"></script>
         <script src="js/materialize.min.js"></script>
-        <script src="inicio.js"></script>
+        <script src="temas_libres.js"></script>
         <script type="text/javascript">
             $(document).ready(function(){
                 $('.sidenav').sidenav();
